<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignTop="@id/imagenIzqLogin"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/imagenIzqLogin"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:srcCompat="@drawable/logo_anime_api" />

            <ImageView
                android:id="@+id/imagenIzqLogin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                app:srcCompat="@drawable/img" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative1"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/welcomeLogin1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hello"
                android:layout_marginBottom="5dp"
                android:text="@string/welcomeLogin2"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative2"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/emailPalabra"
                    android:inputType="textWebEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passInputLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailInputLogin"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEditLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/passPalabra"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative3"
            android:gravity="center">

            <Button
                android:id="@+id/buton1SignLogin"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/LoginPalabra" />

            <Button
                android:id="@+id/buton2SignLogin"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/buton1SignLogin"
                android:backgroundTint="@color/teal_700"
                android:text="@string/SignUpPalabra" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>